--- a/.gitignore
+++ b/.gitignore
@@ -55,4 +55,7 @@ pids
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+# Added by me
+
 ideias.txt
+eng.traineddata
