feat: migrate from SQLite to PostgreSQL and update Docker configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,28 @@
-version: '3.8'
-
 services:
-  # Backend service using NestJS
   backend_service:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "3000:3000" # Map port 3000 on the host to port 3000 in the container
+      - "3000:3000"
     volumes:
-      - sqlite_data:/usr/src/app/database # Persist SQLite data
+      - ./database:/usr/src/app/database
+      - /usr/src/app/node_modules
     environment:
-      - NODE_ENV=dev # Set environment variable
+      - NODE_ENV=dev
     depends_on:
-      - sqlite_database # Ensure the database service is started before the backend
+      - db
 
-  # SQLite database service
-  sqlite_database:
-    image: alpine
-    command: tail -f /dev/null # Keep the container running
+  db:
+    image: postgres:latest
     volumes:
-      - sqlite_data:/usr/src/app/database # Persist SQLite data
+      - database_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - "5432:5432"
 
-# Define named volumes
 volumes:
-  sqlite_data:
+  database_data:
