--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,15 @@ services:
     depends_on:
       - db
 
+  ocr_service:
+    build:
+      context: .
+      dockerfile: python_ocr_server/dockerfile
+    ports:
+      - "5000:5000"
+    volumes:
+      - ./database:/usr/src/app/database
+
   db:
     image: postgres:latest
     volumes:
